monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A2102/A2102b.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A2102;

grammar A2102b {
  external A;

  B implements A;

}

